<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project.ui.home.HomeFragment"
        android:label="@string/my_games"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_nav_home_to_gameAddedFragment"
            app:destination="@id/gameAddedFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_games"
        android:name="com.example.project.ui.games.GamesFragment"
        android:label="@string/games"
        tools:layout="@layout/fragment_games" >
        <action
            android:id="@+id/action_nav_games_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_nav_games_to_createGameFragment"
            app:destination="@id/createGameFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.project.ui.users.UsersFragment"
        android:label="@string/users"
        tools:layout="@layout/fragment_users" >
        <action
            android:id="@+id/action_nav_users_to_profileFragment"
            app:destination="@id/profileFragment" />
        <action
            android:id="@+id/action_nav_users_to_myProfileFragment"
            app:destination="@id/myProfileFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_ranking"
        android:name="com.example.project.ui.scoreboard.ScoreboardFragment"
        android:label="@string/rankingString"
        tools:layout="@layout/fragment_scoreboard" >
        <action
            android:id="@+id/action_nav_ranking_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.project.ui.game.GameFragment"
        android:label="GameFragment"
        tools:layout="@layout/fragment_game">
        <action
            android:id="@+id/action_gameFragment_to_achievementFragment"
            app:destination="@id/achievementFragment" />
        <action
            android:id="@+id/action_gameFragment_to_createAchievementFragment"
            app:destination="@id/createAchievementFragment" />
        <action
            android:id="@+id/action_gameFragment_to_editGameFragment"
            app:destination="@id/editGameFragment" />
    </fragment>

    <fragment
        android:id="@+id/achievementFragment"
        android:name="com.example.project.ui.achievement.AchievementFragment"
        android:label="AchievementFragment"
        tools:layout="@layout/fragment_achievement">
        <action
            android:id="@+id/action_achievementFragment_to_editAchievementFragment"
            app:destination="@id/editAchievementFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.project.ui.profile.ProfileFragment"
        android:label="ProfileFragment"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/gameAddedFragment"
        android:name="com.example.project.ui.gameAdded.GameAddedFragment"
        android:label="GameAddedFragment" >
        <action
            android:id="@+id/action_gameAddedFragment_to_achievementAddedFragment"
            app:destination="@id/achievementAddedFragment" />
    </fragment>
    <fragment
        android:id="@+id/achievementAddedFragment"
        android:name="com.example.project.ui.achievementAdded.AchievementAddedFragment"
        android:label="AchievementAddedFragment" />
    <fragment
        android:id="@+id/myProfileFragment"
        android:name="com.example.project.ui.myProfile.MyProfileFragment"
        android:label="MyProfileFragment" >
        <action
            android:id="@+id/action_myProfileFragment_to_signInActivity"
            app:destination="@id/signInActivity" />
        <action
            android:id="@+id/action_myProfileFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <activity
        android:id="@+id/signInActivity"
        android:name="com.example.project.SignInActivity"
        android:label="activity_sign_in"
        tools:layout="@layout/activity_sign_in" />
    <fragment
        android:id="@+id/createGameFragment"
        android:name="com.example.project.ui.createGame.CreateGameFragment"
        android:label="CreateGameFragment" />
    <fragment
        android:id="@+id/createAchievementFragment"
        android:name="com.example.project.ui.createAchievement.CreateAchievementFragment"
        android:label="CreateAchievementFragment" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.project.ui.editProfile.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/editGameFragment"
        android:name="com.example.project.ui.editGame.EditGameFragment"
        android:label="EditGameFragment" />
    <fragment
        android:id="@+id/editAchievementFragment"
        android:name="com.example.project.ui.editAchievement.EditAchievementFragment"
        android:label="EditAchievementFragment" />

</navigation>