<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileCreateGameCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:cardBackgroundColor="@color/water">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/game_edit_name"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/game_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.224" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/game_edit_releaseDate"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/game_release_date"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/game_edit_about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_edit_genre"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/game_edit_about"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="164dp"
                android:fontFamily="@font/arcade_classic"
                android:gravity="center"
                android:text="@string/about_game"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_edit_releaseDate"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/game_edit_about_text"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_edit_about"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/game_edit_genre"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/game_genre"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/game_edit_releaseDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_edit_publisher"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/game_edit_publisher"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/game_publisher"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/game_edit_genre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_edit_developer"
                app:layout_constraintVertical_bias="0.027" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/game_edit_developer"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/game_developer"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/game_edit_publisher"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_edit_console"
                app:layout_constraintVertical_bias="0.003" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/game_edit_console"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/game_console"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/game_edit_developer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_edit_image"
                app:layout_constraintVertical_bias="0.057" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/game_edit_image"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/image_url"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/game_edit_console"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/game_edit_name" />

            <EditText
                android:id="@+id/game_edit_genre_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/game_edit_genre"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.591" />

            <EditText
                android:id="@+id/game_edit_releaseDate_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/game_edit_releaseDate"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.662" />

            <Button
                android:id="@+id/game_edit_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/arcade_classic"
                android:text="Finish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_edit_about_text"
                app:layout_constraintVertical_bias="0.489" />


            <EditText
                android:id="@+id/game_edit_publisher_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/game_edit_publisher"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52" />

            <EditText
                android:id="@+id/game_edit_developer_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/game_edit_developer"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.437" />

            <EditText
                android:id="@+id/game_edit_console_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/game_edit_console"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.366" />

            <EditText
                android:id="@+id/game_edit_image_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/game_edit_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.295" />

            <EditText
                android:id="@+id/game_edit_name_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/game_edit_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.224" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>