<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileCreateAchievementCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="14dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:cardBackgroundColor="@color/water">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/achievement_edit_name"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/achievement_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.224" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/achievement_edit_image"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/image_url"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/achievement_edit_points"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/achievement_edit_name"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/achievement_edit_points"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/achievement_points"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/achievement_edit_progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievement_edit_image"
                app:layout_constraintVertical_bias="0.057" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/achievement_edit_progress"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/arcade_classic"
                android:gravity="left"
                android:text="@string/achievement_progress"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/achievement_edit_about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.163"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievement_edit_points"
                app:layout_constraintVertical_bias="0.003" />

            <EditText
                android:id="@+id/achievement_edit_progress_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:layout_marginEnd="32dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/achievement_edit_progress"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.572" />

            <EditText
                android:id="@+id/achievement_edit_points_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/achievement_edit_points"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.456" />

            <EditText
                android:id="@+id/achievement_edit_image_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/achievement_edit_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.34" />

            <EditText
                android:id="@+id/achievement_edit_name_text"
                android:layout_width="160dp"
                android:layout_height="29dp"
                android:layout_marginEnd="40dp"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/achievement_edit_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.224" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/achievement_edit_about"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="164dp"
                android:fontFamily="@font/arcade_classic"
                android:gravity="center"
                android:text="@string/about_game"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievement_edit_progress"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/achievement_edit_about_text"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievement_edit_about"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/achievement_edit_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/arcade_classic"
                android:text="Finish"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievement_edit_about_text"
                app:layout_constraintVertical_bias="0.489" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>